@@ -40,6 +40,7 @@
 	                            <option _data-locale-id="configure_program_typecsharp" value="Javascript">Javascript Script</option>
 	                            <option _data-locale-id="configure_program_typecsharp" value="Python">Python Script</option>
 	                            <option _data-locale-id="configure_program_typecsharp" value="Ruby">Ruby Script</option>
+                                <option _data-locale-id="configure_program_typearduino" value="Arduino">Arduino Sketch</option>
 	                        </select>
 	                    </div>
 	                    <div class="ui-block-b">
@@ -103,16 +104,18 @@
         	<div data-role="controlgroup" data-type="horizontal" data-mini="true" style="top:4px;left:4px;position:absolute;margin:0" data-theme="e">
 	        	<a id="configure_program_editorcompilecode2" class="ui-btn ui-btn-icon-left ui-icon-check" href="#">Compile</a>
         	</div>
-    		<label data-locale-id="configure_program_triggertype" for="automation_conditiontype" style="top:14px;left:250px;position:absolute;margin:0">Trigger</label>
-        	<div data-role="controlgroup" data-type="horizontal" data-mini="true" style="top:4px;left:302px;position:absolute;margin:0" data-theme="e">
-                <select id="automation_conditiontype">
-                    <option data-locale-id="configure_program_conditionswitchestrue" value="OnSwitchTrue">when condition evaluation switches to 'true'</option>
-                    <option data-locale-id="configure_program_conditionswitchesfalse" value="OnSwitchFalse">when condition evaluation switches to 'false'</option>
-                    <option data-locale-id="configure_program_runonceconditiontrue" value="Once">run once, when condition evaluation returns 'true'</option>
-                    <option data-locale-id="configure_program_conditionistrue" value="OnTrue">when condition evaluation returns 'true'</option>
-                    <option data-locale-id="configure_program_conditionisfalse" value="OnFalse">when condition evaluation returns 'false'</option>
-                </select>
-        	</div>
+            <div id="automation_conditiontype_wrapper">
+        		<label data-locale-id="configure_program_triggertype" for="automation_conditiontype" style="top:14px;left:250px;position:absolute;margin:0">Trigger</label>
+            	<div data-role="controlgroup" data-type="horizontal" data-mini="true" style="top:4px;left:302px;position:absolute;margin:0" data-theme="e">
+                    <select id="automation_conditiontype">
+                        <option data-locale-id="configure_program_conditionswitchestrue" value="OnSwitchTrue">when condition evaluation switches to 'true'</option>
+                        <option data-locale-id="configure_program_conditionswitchesfalse" value="OnSwitchFalse">when condition evaluation switches to 'false'</option>
+                        <option data-locale-id="configure_program_runonceconditiontrue" value="Once">run once, when condition evaluation returns 'true'</option>
+                        <option data-locale-id="configure_program_conditionistrue" value="OnTrue">when condition evaluation returns 'true'</option>
+                        <option data-locale-id="configure_program_conditionisfalse" value="OnFalse">when condition evaluation returns 'false'</option>
+                    </select>
+            	</div>
+            </div>
         	<div data-role="controlgroup" data-type="horizontal" data-mini="true" style="top:4px;right:84px;position:absolute;margin:0" data-theme="f">
 	        	<a id="program_error_button2" class="ui-btn ui-corner-all ui-btn-icon-left ui-icon-alert" href="#">Errors</a>
         	</div>
@@ -155,7 +158,7 @@
     {include pages/configure/programengine/commandwizard.html}
     {include pages/configure/programengine/conditionwizard.html}
 
-    <div id="automation_program_switchtype" class="ui-corner-all" data-role="popup" data-overlay-theme="b">
+    <div id="automation_program_switchtype" class="ui-corner-all" data-dismissible="false" data-role="popup" data-overlay-theme="b">
         <div data-role="header" class="ui-corner-top">
             <h1 data-locale-id="configure_program_switchtypetitle">Change Type?</h1>
         </div>
