@@ -1,22 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <ReleaseInfo xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <Name>HomeGenie</Name>
-  <Version>1.00 beta r421</Version>
+  <Version>1.00 beta r422</Version>
   <Description>Latest public release.</Description>
-  <ReleaseNote>   - Updated MCP3008 app
-   - Fixed modules sorting issue
-   - Added 1-Wire modules app
-   - Updated Insteon interface to support X10
-   - Updated Generic Thermostat app
-   - Fixed missing png files for thermostat widget (issue #45)
-   - Fixed some missing app assemblies
-   - Fixed ModuleParameter.DecimalValue negative values conversion (issue #43)
-   - Reviewed ZWaveLib/MIG Thermostat device implementation
-   - Added new thermostat widget
-   - Updated MCP3008 app, now with virtual modules mapped from analog input channels
-   - Added "Generic Thermostat" app for using any sensor and any switch module for implementing a thermostat logic
-   - Fixed modules properties editing bug (issue #27)
-   - Enhanced HTTP port binding: if default HTTP port is busy, HG will now try to bind from 8080 to 8090
-   - Should fix Z-Wave discovery problem reported as issue #42</ReleaseNote>
-  <ReleaseDate>2014-11-14T00:11:52.0000Z</ReleaseDate>
+  <ReleaseNote>   - Added skelton for ProgramEngine.CompileArduino function
+  - Adding support for Arduino sketches inside HomeGenie Program Editor (wip)</ReleaseNote>
+  <ReleaseDate>2014-11-20T11:37:18.0000Z</ReleaseDate>
 </ReleaseInfo>
