@@ -2,8 +2,8 @@
   <MonoDevelop.Ide.Workspace ActiveConfiguration="Debug" />
   <MonoDevelop.Ide.Workbench ActiveDocument="../HISTORY.TXT">
     <Files>
-      <File FileName="../HISTORY.TXT" Line="10" Column="39" />
-      <File FileName="../HomeGenie/release_info.xml" Line="20" Column="35" />
+      <File FileName="../HISTORY.TXT" Line="17" Column="1" />
+      <File FileName="../HomeGenie/release_info.xml" Line="7" Column="47" />
     </Files>
   </MonoDevelop.Ide.Workbench>
   <MonoDevelop.Ide.DebuggingService.Breakpoints>
